[package]
name = "sysrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
futures = "0.3.28"
# mimalloc = "0.1.37"
rustix = { version = "0.38.2", features = ["fs", "process", "thread"] }
tokio = { version = "1.29.1", features = ["fs", "parking_lot", "rt-multi-thread", "rt", "io-util", "net"] }
tokio-stream = { version = "0.1.14", features = ["io-util"] }

[profile]
[profile.dev.package."*"]
opt-level = "s"
debug = 0
[profile.release]
codegen-units = 1
debug = 0
lto = "fat"
strip = "debuginfo"
