[package]
name = "sysrs"
version = "0.1.0"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-recursion = "1.0.5"
cgroups = "0.1.0"
futures = "0.3.28"
rustix = { version = "0.38.2", features = ["fs", "process", "thread"] }
tap = "1.0.1"
tokio = { version = "1.29.1", features = ["fs", "parking_lot", "rt-multi-thread", "rt", "io-util", "net", "signal", "time", "sync"] }
tokio-stream = { version = "0.1.14", features = ["io-util", "signal"] }
zbus = { version = "3.14.1", features = ["tokio"], default-features = false }

[profile]
[profile.dev.package."*"]
opt-level = "s"
debug = 0

[profile.release]
codegen-units = 1
debug = 0
lto = "fat"
strip = "debuginfo"
