[package]
name = "sysrs"
version = "0.1.0"
edition = "2021"
readme = "README.md"

[[bin]]
name = "sysrsctl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-recursion = "1.0.5"
async-trait = "0.1.73"
cgroups = "0.1.0"
clap = { version = "4.4.4", features = ["derive"] }
futures = "0.3.28"
rustix = { version = "0.38.2", features = ["fs", "process", "thread"] }
serde = { version = "1.0.188", features = ["derive"] }
tap = "1.0.1"
tokio = { version = "1.29.1", features = ["fs", "parking_lot", "rt-multi-thread", "rt", "io-util", "net", "signal", "time", "sync", "macros"] }
tokio-stream = { version = "0.1.14", features = ["io-util", "signal", "fs"] }
toml = "0.8.0"
zbus = { version = "3.14.1", features = ["tokio"], default-features = false }
zvariant = "3.15.0"

[profile]
[profile.dev.package."*"]
opt-level = "s"
debug = 0

[profile.release]
codegen-units = 1
debug = 0
lto = "fat"
strip = "debuginfo"
